# summary-rs

./: .gitignore  Cargo.toml  readme.md
.github/workflows/: publish-crate-lib.yml
src/: init.rs  lib.rs  reader.rs  repack.rs  types.rs
src/modify_docx/: mod.rs  utils.rs
src/parse/: assign.rs  mod.rs  read.rs  regex.rs
src/pdf/: mod.rs  read.rs  read_text.rs
