[package]
name = "summary-rs"
version = "0.1.1"
edition = "2021"

authors = ["inintencunter <2911583893@qq.com>"]
include = [
  "readme.md",
  "src",
  "Cargo.toml",
]

description = "A summary library for lithium battery and sodium ion battery"
homepage = "https://github.com/initialencounter/summary-rs"
readme = "readme.md"
keywords = [
  "docx",
]
license = "AGPL-3.0"
repository = "https://github.com/initialencounter/summary-rs"
[dependencies]
fax = "0.2.4"
lazy_static = "1.5.0"
pdf = "0.9.0"
quick-xml = "0.37.1"
regex = "1.11.1"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
zip = "2.2.1"
